--- a/index.html
+++ b/index.html
@@ -1,46 +1,38 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Using CSS Grid</title>
-	<style>
-		body{
-			color: #fff;
-			font-family: 'Nunito Semibold';
-			text-align: center;
-		}
-		#content{
-			display: grid;
-			/*grid-template-columns: 30% 20% 50%;*/
-			/*grid-template-columns: 1fr 2fr 1fr;*/
-			grid-template-columns: repeat(3, 1fr);
-			max-width: 960px;
-			margin: 0 auto;
-		}
-		#content div{
-			background: #3bbced;
-			padding: 30px;
-		}
-		#content div:nth-child(even){
-			background: #777;
-			padding: 30px;
-		}
-	</style>
-</head>
-<body>
-
-	<div id="content">
-
-		<div>1</div>
-		<div>2</div>
-		<div>3</div>
-		<div>4</div>
-		<div>5</div>
-		<div>6</div>
-		<div>7</div>
-		<div>8</div>
-		<div>9</div>
-
-	</div>
-
-</body>
+  <head>
+    <title>Using CSS Grid</title>
+    <style>
+      body {
+        color: #fff;
+        font-family: "Nunito Semibold";
+        text-align: center;
+      }
+      #content {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-auto-rows: minmax(150px, auto);
+        grid-gap: 10px;
+        max-width: 960px;
+        margin: 0 auto;
+      }
+      #content div {
+        background: #3bbced;
+        padding: 30px;
+      }
+      #content div:nth-child(even) {
+        background: #777;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="content">
+      <div class="one">1</div>
+      <div class="two">2</div>
+      <div class="three">3</div>
+      <div class="four">4</div>
+      <div class="five">5</div>
+      <div class="six">6</div>
+    </div>
+  </body>
 </html>
