Updated font family.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <style>
       body {
         color: #fff;
-        font-family: "Nunito Semibold";
+        font-family: "Nunito Semibold", sans-serif;
         text-align: center;
       }
       #content {
