--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         grid-gap: 10px;
         grid-template-areas:
           "header header header header"
-          "aside . main main"
-          "nav . main main"
+          "aside aside main main"
+          "nav nav main main"
           "section section section section"
           "section section section section"
           "footer footer footer footer";
